[package]
name = "rust_async_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.0.2", features = ["full"] }
error-chain = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
